<resources>
    <string name="app_name">Kiwi Cookies and Cakes - Inventory</string>
    <string name="mandatory_indicator">*</string>
    <string name="user_label">User</string>
    <string name="password_label">Password</string>
    <string name="login_button_label">Login</string>
    <string name="login_error_header">Please enter your</string>
    <string name="login_error_user_name">User Name</string>
    <string name="login_error_password">Password</string>
    <string name="and">and</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_home_header">Home</string>
    <string name="tab_text_inventory">Inventory</string>
    <string name="logout">Logout</string>
    <string name="welcome_message_header">Welcome</string>
    <string name="error_incorrect_login">Sorry. We did not recognise that user/password combination. Please try again</string>
    <string name="add_inventory_title">Add Inventory Item</string>
    <string name="inventory_name_label">Item Name</string>
    <string name="inventory_quantity_label">Quantity</string>
    <string name="required">Required</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

    <!--add inventory activity strings-->
    <string name="missing_inventory_details_header">Please enter</string>
    <string name="missing_inventory_item_name">Item Name</string>
...
